third_party/rust/pin-project/tests/ui/unstable-features/marker_trait_attr-feature-gate.stderr
error[E0119]: conflicting implementations of trait `std::marker::Unpin` for type `Foo<_>`:
  --> $DIR/marker_trait_attr-feature-gate.rs:6:1
   |
6  | #[pin_project] //~ ERROR E0119
   | ^^^^^^^^^^^^^^ conflicting implementation for `Foo<_>`
...
13 | impl<T> Unpin for Foo<T> {}
   | ------------------------ first implementation here
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
